# rentsplit

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: demo.ipynb
src/: __init__.py  assignment.py  assingment.py  cli.py  computation.py  pricing.py  properties.py
tests/: test_examples.py  test_input_validation.py
