[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rentsplit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.2",
]

[project.optional-dependencies]
notebooks = ["ipykernel"]
dev = ["black", "ruff", "pre-commit"]

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    "I002",
]